<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pill Reminder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_pill">CreatePillActivity</string>
    <string name="textPillName">Pill name</string>
    <string name="textCreatePill">Create pill</string>
    <string name="textHour">Hour</string>
    <string name="textDosis">Dosis</string>
    <string name="textMonday">Monday</string>
    <string name="textTuesday">Tuesday</string>
    <string name="textWednesday">Wednesday</string>
    <string name="textThursday">Monday</string>
    <string name="textFriday">Friday</string>
    <string name="textSaturday">Monday</string>
    <string name="textSunday">Sunday</string>
    <string name="textRepeatDays">Repeat days</string>
    <string name="textCreate">Create</string>
    <string name="textSave">Save</string>
    <string name="textPillInsertedOK">Pill inserted OK</string>
    <string name="textPillModifiedOK">Pill modified OK</string>
    <string name="textPillInsertedNOTOK">ERROR inserting pill</string>
    <string name="textDeletePillQuestion">Are you sure you want to delete this pill?</string>
    <string name="textYes">Yes</string>
    <string name="textNo">No</string>
    <string name="textConfirmDelePill">Confirm delete</string>
    <string name="textPillDeleted">Pill deleted</string>
    <string name="title_activity_modify">ModifyActivity</string>
    <string name="textPillDetails">Pill details</string>
    <string name="title_activity_alarm_screen">AlarmScreen</string>
    <string name="textTakePill">Take pill</string>

</resources>
